--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,83 @@
 * {
     padding: 0;
     margin: 0;
+    max-width: 100%;
 }
 
+@font-face {
+    font-family: "ss";
+    src: url("./fonts/ssbold.otf") format("opentype");
+    font-weight: bold;
+    font-style: normal;
+  }
+
+@font-face {
+    font-family: "ss";
+    src: url("./fonts/ssbook.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+  }  
+
+  @font-face {
+    font-family: "ss";
+    src: url("./fonts/sslight.otf") format("opentype");
+    font-weight: lighter;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "futura";
+    src: url("./fonts/futurabold.ttf") format("truetype");
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "futura";
+    src: url("./fonts/futurabook.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "futura";
+    src: url("./fonts/futuralight.ttf") format("truetype");
+    font-weight: lighter;
+    font-style: normal;
+  }
+
 body {
-    background-color: aqua;
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: center;
+    background-color: rgb(248, 248, 248);
+    
+}
+
+header{
+    background-color: #000B8D;
+    border-radius: 0px 0px 15px 15px;
 }
 
 h1 {
-    color: green;
+    text-align: center;
+    color: black;
+    font-family: "futura";
+    font-weight: bold;
+    font-size: 60px;
+    margin: 30px 0px 10px 0px;
+    
 }
 
-img {
-    max-width: 2vh;
+h2 {
+    text-align: center;
+    color: grey;
+    font-family: "futura";
+    font-weight: normal;
+    font-size: 20px;
+    margin-bottom: 3em;
 }
 
-
+a>img {
+    max-width: 3vh;
+}
 
 ul {
     display: flex;
@@ -29,10 +89,72 @@ ul {
 
 li {
     margin-right: 2em;
+    font-family: "futura";
     text-decoration: none;
+    background-color: #db0840;
+    margin: 3em;
+    padding: 14px 24px;
+    border-radius: 6px;
+    font-size: 19px;
+    font-weight: bold;
+    line-height: 1;
+    letter-spacing: 1,5px;
+    
+
+}
+
+li:hover {
+    background-color: #f30b47;
+}
+
+li:focus {
+    background-color: #f30b47;
 }
 
 li>a {
-    color: black;
+    color: white;
     text-decoration: none;
+    padding: 1em;
+    margin: 1em;
+    
+}
+
+li>a>img {
+    scale: 800%;
+    background-color: #000B8D;
+}
+
+
+p{
+    line-height: 125%;
+    font-family: "Futura";
+    font-weight: normal;
+    text-align: center;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+
+
+}
+
+.blik {
+    width: 150px;
+}
+
+article {
+    font-family: "Futura";
+    padding: 5vh 10vh 20vh 10vh;
+    display: flex;
+    justify-content: flex-start
+    
+}
+
+article>h3 {
+    padding-left: 50px;
+    margin-right: 50px;
+    font-size: 70px;
+}
+
+article>h4 {
+    color: grey;
 }
