--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,13 @@
     font-style: normal;
   }
 
+  @font-face {
+    font-family: "futura";
+    src: url("./fonts/futurabookitalic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+  }
+
 body {
     background-color: rgb(248, 248, 248);
     
@@ -125,7 +132,7 @@ li>a>img {
 }
 
 
-p{
+main>p {
     line-height: 125%;
     font-family: "Futura";
     font-weight: normal;
@@ -145,16 +152,34 @@ article {
     font-family: "Futura";
     padding: 5vh 10vh 20vh 10vh;
     display: flex;
-    justify-content: flex-start
+    flex-direction: row;
     
 }
 
-article>h3 {
+section>h3 {
     padding-left: 50px;
     margin-right: 50px;
     font-size: 70px;
 }
 
-article>h4 {
+section>h4 {
     color: grey;
+    font-family: "Futura";
+    font-weight: bold;
+    font-style: italic;
+    padding-left: 50px;
+    margin-right: 50px;
+    font-size: 35px;
+}
+
+section>p {
+    color: #f30b47;
+    padding-left: 50px;
+    padding-top: 25px;
+    max-width: 45vw;
+}
+
+.inleiding {
+    font-size: 20px;
+    padding-bottom: 2em;
 }
