--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@ li {
     text-decoration: none;
     background-color: #db0840;
     margin: 3em 0em;
-    padding: 20px 50px;
+    padding: 22px 10px;
     border-radius: 6px;
     font-size: 19px;
     font-weight: bold;
@@ -110,8 +110,8 @@ li>a {
 }
 
 li>a>img {
-    scale: 900%;
-    width: 20px;
+    scale: 600%;
+    width: 40px;
     background-color: #000B8D;
 }
 
@@ -173,7 +173,7 @@ main#index p {
 /* drankjes */
 
 main#drankjes p {
-    text-align: center;
+    text-align: left;
 }
 
 main#drankjes section {
@@ -236,12 +236,12 @@ article>section>p {
 }
 
 .links * {
-    max-width: 25vw;
+    max-width: 23vw;
     padding-right: 20px;
 }
 
 .rechts * {
-    max-width: 25vw;
+    max-width: 23vw;
     padding-left: 10px;
     margin-left: 0;
 }
@@ -252,7 +252,7 @@ article>section>p {
 }
 
 .rechts > img {
-    height: 35vh;
+    height: 30vh;
     width: 35vh;
 }
 
@@ -296,4 +296,6 @@ main#overig>img {
 main#overig>video {
     margin-left: 238px;
     margin-bottom: 40px;
+    max-width: 600px;
+    max-height: 600px;
 }
